implemented minmax and basic utterance

--- a/OurAgent-vs-Randy-in-TTT-round-1.html
+++ b/OurAgent-vs-Randy-in-TTT-round-1.html
@@ -9,51 +9,27 @@
 </table><br>
 <h3>X to move.</h3>
 <h2>Move is by X to (0, 1)</h2>
-<h2>OurAgent says: TESTING PHRASE 1</h2>
-<table>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-</table><br>
-<h3>O to move.</h3>
-<h2>Move is by O to (2, 0)</h2>
-<h2>Randy says: How's that for random?</h2>
-<table>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-</table><br>
-<h3>X to move.</h3>
-<h2>Move is by X to (2, 2)</h2>
-<h2>OurAgent says: TESTING PHRASE 2</h2>
-<table>
-<tr><td><img src=gray32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-</table><br>
-<h3>O to move.</h3>
-<h2>Move is by O to (0, 0)</h2>
-<h2>Randy says: Flip!</h2>
-<table>
-<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-</table><br>
-<h3>X to move.</h3>
-<h2>Move is by X to (1, 2)</h2>
 <h2>OurAgent says: TESTING PHRASE 3</h2>
 <table>
-<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+</table><br>
+<h3>X to move.</h3>
+<h2>Move is by X to (2, 0)</h2>
+<h2>Randy says: How's that for random?</h2>
+<table>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=gray32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
 <h3>O to move.</h3>
 <h2>Move is by O to (1, 0)</h2>
-<h2>Randy says: Spin!</h2>
+<h2>OurAgent says: TESTING PHRASE 2</h2>
 <table>
-<tr><td><img src=O32.png></td><td><img src=X32.png></td><td><img src=gray32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
-<tr><td><img src=O32.png></td><td><img src=gray32.png></td><td><img src=X32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=O32.png></td><td><img src=O32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
+<tr><td><img src=X32.png></td><td><img src=gray32.png></td><td><img src=gray32.png></td></tr>
 </table><br>
-<h2>Win for O at [1][0] in direction (1, 0)</h2>
+<h2>Win for X at [1][0] in direction (1, 0)</h2>
 </body></html>
